@@ -1,3 +1,9 @@
+2016-11-24  Niels Möller  <nisse@lysator.liu.se>
+
+	* tests/hex-random.c (mkseed): New function, using /dev/urandom
+	for random seed when available.
+	(hex_random_init): Use it.
+
 2016-11-23  Niels Möller  <nisse@lysator.liu.se>
 
 	* mini-gmp.c (GMP_CMP): New macro.
